--- a/notebooks/explorations.ipynb
+++ b/notebooks/explorations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 85,
    "id": "d53082f6",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
        "4   60       Auto     215.982881"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 86,
    "id": "97ee8c87",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 87,
    "id": "0c6be216",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 88,
    "id": "7db62c11",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 89,
    "id": "2153ed4b",
    "metadata": {},
    "outputs": [
@@ -319,7 +319,7 @@
        "9            1           0             0  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 90,
    "id": "2e10419c",
    "metadata": {},
    "outputs": [
@@ -435,7 +435,7 @@
        "9  30.0  53.1             97         0            1           0             0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 91,
    "id": "46319fdb",
    "metadata": {},
    "outputs": [
@@ -561,7 +561,7 @@
        "9             0  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 92,
    "id": "43bd356a",
    "metadata": {},
    "outputs": [
@@ -589,7 +589,7 @@
       "Link Function:                    log   Scale:                         0.39997\n",
       "Method:                          IRLS   Log-Likelihood:                -13446.\n",
       "Date:                Sun, 27 Apr 2025   Deviance:                       506.26\n",
-      "Time:                        00:41:14   Pearson chi2:                     531.\n",
+      "Time:                        00:46:41   Pearson chi2:                     531.\n",
       "No. Iterations:                    15   Pseudo R-squ. (CS):             0.6361\n",
       "Covariance Type:            nonrobust                                         \n",
       "=================================================================================\n",
@@ -626,61 +626,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "bd34a37a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'Age'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\danny\\OneDrive\\Documents\\Actuary-stuff\\claims-risk-analyser\\venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3805\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3804\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3805\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3806\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mindex.pyx:167\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mindex.pyx:196\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7081\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7089\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[31mKeyError\u001b[39m: 'Age'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[37]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Calculate claim probability based on Age and PremiumAmount\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m df[\u001b[33m'\u001b[39m\u001b[33mClaimProbability\u001b[39m\u001b[33m'\u001b[39m] = (\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mAge\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m / df[\u001b[33m'\u001b[39m\u001b[33mAge\u001b[39m\u001b[33m'\u001b[39m].max()) * \u001b[32m0.6\u001b[39m + (\u001b[32m1\u001b[39m - (df[\u001b[33m'\u001b[39m\u001b[33mPremiumAmount\u001b[39m\u001b[33m'\u001b[39m] / df[\u001b[33m'\u001b[39m\u001b[33mPremiumAmount\u001b[39m\u001b[33m'\u001b[39m].max())) * \u001b[32m0.4\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# Simulate claim outcomes \u001b[39;00m\n\u001b[32m      6\u001b[39m df[\u001b[33m'\u001b[39m\u001b[33mClaimOutcome\u001b[39m\u001b[33m'\u001b[39m] = np.random.binomial(\u001b[32m1\u001b[39m, df[\u001b[33m'\u001b[39m\u001b[33mClaimProbability\u001b[39m\u001b[33m'\u001b[39m])\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\danny\\OneDrive\\Documents\\Actuary-stuff\\claims-risk-analyser\\venv\\Lib\\site-packages\\pandas\\core\\frame.py:4102\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4100\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4101\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4102\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4103\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4104\u001b[39m     indexer = [indexer]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\danny\\OneDrive\\Documents\\Actuary-stuff\\claims-risk-analyser\\venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3807\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3808\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3809\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3810\u001b[39m     ):\n\u001b[32m   3811\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3814\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3815\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3816\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3817\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
-      "\u001b[31mKeyError\u001b[39m: 'Age'"
-     ]
-    }
-   ],
-   "source": [
-    "# Calculate claim probability based on Age and PremiumAmount\n",
-    "\n",
-    "df['ClaimProbability'] = (df['Age'] / df['Age'].max()) * 0.6 + (1 - (df['PremiumAmount'] / df['PremiumAmount'].max())) * 0.4\n",
-    "\n",
-    "# Simulate claim outcomes \n",
-    "df['ClaimOutcome'] = np.random.binomial(1, df['ClaimProbability'])\n",
-    "\n",
-    "# df.drop(columns=['ClaimProbability'], inplace=True)\n",
-    "\n",
-    "df.head()  "
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "a0bb0f48",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_encoded = pd.get_dummies(df, columns=['PolicyType'], drop_first=True)\n",
+    "# df_encoded = pd.get_dummies(df, columns=['PolicyType'], drop_first=True)\n",
     "\n",
-    "X = df_encoded[['Age', 'PremiumAmount', 'PolicyType_Home', 'PolicyType_Life']]\n",
-    "y = df_encoded['ClaimOutcome']\n"
+    "# X = df_encoded[['age', 'PremiumAmount', 'PolicyType_Home', 'PolicyType_Life']]\n",
+    "# y = df_encoded['ClaimOutcome']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "77531ee0",
    "metadata": {},
    "outputs": [],
@@ -698,10 +665,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "id": "c255c59a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 Generalized Linear Model Regression Results                  \n",
+      "==============================================================================\n",
+      "Dep. Variable:                  claim   No. Observations:                 1335\n",
+      "Model:                            GLM   Df Residuals:                     1327\n",
+      "Model Family:                Binomial   Df Model:                            7\n",
+      "Link Function:                  Logit   Scale:                          1.0000\n",
+      "Method:                          IRLS   Log-Likelihood:                   -inf\n",
+      "Date:                Sun, 27 Apr 2025   Deviance:                   1.6293e+09\n",
+      "Time:                        00:46:41   Pearson chi2:                 1.94e+27\n",
+      "No. Iterations:                     2   Pseudo R-squ. (CS):                nan\n",
+      "Covariance Type:            nonrobust                                         \n",
+      "=================================================================================\n",
+      "                    coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "---------------------------------------------------------------------------------\n",
+      "const         -1.633e+20   2.02e+07   -8.1e+12      0.000   -1.63e+20   -1.63e+20\n",
+      "age            1.173e+17   1.81e+05    6.5e+11      0.000    1.17e+17    1.17e+17\n",
+      "bmi              2.2e+18   3.05e+05   7.21e+12      0.000     2.2e+18     2.2e+18\n",
+      "bloodpressure  1.573e+18    1.8e+05   8.76e+12      0.000    1.57e+18    1.57e+18\n",
+      "children       4.525e+18   1.53e+06   2.96e+12      0.000    4.53e+18    4.53e+18\n",
+      "gender_male    4.172e+16   4.02e+06   1.04e+10      0.000    4.17e+16    4.17e+16\n",
+      "smoker_Yes     1.406e+20   5.04e+06   2.79e+13      0.000    1.41e+20    1.41e+20\n",
+      "diabetic_Yes  -1.657e+18   3.68e+06   -4.5e+11      0.000   -1.66e+18   -1.66e+18\n",
+      "=================================================================================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\danny\\OneDrive\\Documents\\Actuary-stuff\\claims-risk-analyser\\venv\\Lib\\site-packages\\statsmodels\\genmod\\families\\family.py:1056: RuntimeWarning: invalid value encountered in log\n",
+      "  special.gammaln(n - y + 1) + y * np.log(mu / (1 - mu + 1e-20)) +\n",
+      "c:\\Users\\danny\\OneDrive\\Documents\\Actuary-stuff\\claims-risk-analyser\\venv\\Lib\\site-packages\\statsmodels\\genmod\\families\\family.py:1057: RuntimeWarning: invalid value encountered in log\n",
+      "  n * np.log(1 - mu + 1e-20)) * var_weights\n"
+     ]
+    }
+   ],
    "source": [
     "# Create and fit the GLM model\n",
     "model = sm.GLM(y, X, family=sm.families.Binomial())\n",
@@ -712,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "1d3da4f2",
    "metadata": {},
    "outputs": [],
@@ -723,39 +730,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "e3f31391",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "const            float64\n",
+      "age              float64\n",
+      "bmi              float64\n",
+      "bloodpressure      int64\n",
+      "children           int64\n",
+      "gender_male        int64\n",
+      "smoker_Yes         int64\n",
+      "diabetic_Yes       int64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "print(X.dtypes)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "id": "1f78e280",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X['PolicyType_Home'] = X['PolicyType_Home'].astype(int)\n",
-    "X['PolicyType_Life'] = X['PolicyType_Life'].astype(int)\n"
+    "# X['PolicyType_Home'] = X['PolicyType_Home'].astype(int)\n",
+    "# X['PolicyType_Life'] = X['PolicyType_Life'].astype(int)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "id": "b3e7616c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
+    "# import matplotlib.pyplot as plt\n",
     "\n",
-    "plt.scatter(df_encoded['Age'], df_encoded['Predicted_Prob'], alpha=0.5)\n",
-    "plt.xlabel('Age')\n",
-    "plt.ylabel('Predicted Claim Probability')\n",
-    "plt.title('Predicted Claim Probability vs Age')\n",
-    "plt.show()\n"
+    "# plt.scatter(df_encoded['Age'], df_encoded['Predicted_Prob'], alpha=0.5)\n",
+    "# plt.xlabel('Age')\n",
+    "# plt.ylabel('Predicted Claim Probability')\n",
+    "# plt.title('Predicted Claim Probability vs Age')\n",
+    "# plt.show()\n"
    ]
   }
  ],
